backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitalsync-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tonusername/vitalsync-backend:SHA_COMMIT
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
